--- a/styles/index.css
+++ b/styles/index.css
@@ -299,6 +299,7 @@ body {
 /* MODALKA МОДАЛКА */
 .backdrope {
   position: fixed;
+
   left:0;
   top: 0;
 
@@ -329,11 +330,12 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-
-  min-width: 528px;
-  min-height: 600px;
-  padding: 15px;
-
+ 
+  padding-top: 40px;
+  padding-bottom: 142px;
+  width: 528px;
+  height: 600px;
+  
   background-color: var(--white);
   border-radius: 4px;
 
@@ -364,19 +366,222 @@ body {
 }
 
 
+.close:hover {
+  fill: var(--blue);
+}
+
+
+/* Данные модалки */
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .icon-close {
   width: 11px;
   height: 11px;
 }
+
+
+.form-field {
+  position: relative;
+}
+
+
+.form-field:nth-child(n) {
+  margin-bottom: 28px;
+}
+
+
+.form-input {
+  padding-left: 30px;
+  width: 448px;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+
+.form-input:focus {
+  outline-color: var(--blue);
+}
+
+
+.form-textarea {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+
+.textarea {
+    width: 448px;
+    height: 120px;
+    padding: 12px 16px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    resize: none;
+}
+
+
+.form-label {
+  position: absolute;
+  left: 30px;
+  top: 50%;
+  
+  font-family: 'Roboto';
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  
+  color: #757575;
+  
+  transform: translateY(-50%);
+}
+
+.form-commentar {
+  position: absolute;
+  left: 24px;
+  top: 50px;
+
+  font-family: 'Roboto';
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+  
+  transform: scale(0);
+}
+
+
+.textarea:focus + .form-commentar ,
+.textarea:not(:placeholder-shown) + .form-commentar {
+  transform: translatey(-70px);
+
+  color: var(--blue);
+}
+
+
+.textarea:focus {
+  outline-color: var(--blue);
+}
+
+
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  transform:translateY(-40px);
+
+  color: var(--blue);
+}
+
+
+.form-h2 {
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 30px;
+}
+
+
+.icon-modal {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+
+  width: 18px;
+  height: 18px;
+
+  transform: translateY(-50%);
+}
+
+
+.form-input ~ .icon-modal {
+  fill: #212121;
+}
+
+
+.form-input:focus ~ .icon-modal {
+  fill: var(--blue);
+}
+
+
+.checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  appearance: none;
+}
+
+
+.policy {  
+  display: flex;
+  align-items: center;
+
+  font-family: 'Roboto';
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+
+}
+
+
+.policy-text {
+  color: var(--blue);
+}
+
+
+.but-modal {
+  width: 200px;
+  height: 50px;
+  
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  
+  border-color: transparent;
+  border-radius: 4px;
+  background-color: var(--blue);
+  color: #FFFFFF;
+  
+  cursor: pointer;
+}
+
+
+.icon-checkbox {
+  
+  width: 18px;
+  height: 18px;
+  margin-right: 7px;
+
+  border-radius: 4px;
+  border: 2px solid #000;
+}
+
+
+.checkbox:checked ~ .icon-checkbox {
+  background-image: url(../images/icon/svg/jackdaw.svg);
+
+  background-size: contain;
+  background-position: center;
+  background-origin: border-box;
+
+  border-color: var(--blue);
+  background-color:var(--blue);
+}
+
 /* MODALKA МОДАЛКА END*/
 
 
 /* <!-- Детали --> */
-.color-quality {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 
 .list-1,
 .list-2,
@@ -772,6 +977,87 @@ body {
   border-radius: 50%;
   background-color: #ffffff1a;
 }
+/*Підпишіться на розсилку Start*/
+.butt-type {
+  margin-left: 93px;
+  
+}
+
+
+.butt-text {
+  display: block;
+  margin-bottom: 20px;
+
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+
+  color: #FFFFFF;
+}
+
+
+.butt-join {
+  display: flex;
+  gap: 10px;
+}
+
+
+.link-input {
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 20px;
+  font-size: 16px;
+  letter-spacing: 0.03em;
+  
+  width: 358px;
+  height: 50px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  
+  color: rgba(255, 255, 255, 0.6);
+  background-color: #2F303A; 
+
+  outline: none;
+}
+
+
+.link-butt {
+  width: 200px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 4px;
+  background: #2196F3;
+  border-color: transparent;
+
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  cursor:pointer;
+
+  color: #FFFFFF;
+}
+/* .link-butt:active {
+  color: #fff;
+  background: #2196F3;
+} */
+
+.icon-icon-send {
+  fill: var(--white);
+
+  margin-left: 10px;
+}
+/* Підпишіться на розсилку END */
 
 /* FOOTER- НИЗ END*/
+
 
