--- a/styles/index.css
+++ b/styles/index.css
@@ -366,7 +366,8 @@ body {
 }
 
 
-.close:hover {
+.close:hover,
+.close:focus {
   fill: var(--blue);
 }
 
@@ -402,6 +403,8 @@ body {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
+  transition: outline-color 300ms;
 }
 
 
@@ -425,6 +428,7 @@ body {
     border-radius: 4px;
 
     resize: none;
+    transition: outline-color 300ms;
 }
 
 
@@ -456,12 +460,14 @@ body {
   color: #757575;
   
   transform: scale(0);
+  transition: transform 300ms;
 }
 
 
 .textarea:focus + .form-commentar ,
 .textarea:not(:placeholder-shown) + .form-commentar {
   transform: translatey(-70px);
+  transition: color 250ms;
 
   color: var(--blue);
 }
@@ -476,9 +482,9 @@ body {
 .form-input:not(:placeholder-shown) + .form-label {
   transform:translateY(-40px);
 
+  transition: transform 300ms, color 250ms;
   color: var(--blue);
 }
-
 
 .form-h2 {
   display: flex;
@@ -497,6 +503,7 @@ body {
   height: 18px;
 
   transform: translateY(-50%);
+  transition: fill 250ms;
 }
 
 
@@ -514,7 +521,6 @@ body {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  appearance: none;
 }
 
 
@@ -549,8 +555,9 @@ body {
   
   border-color: transparent;
   border-radius: 4px;
-  background-color: var(--blue);
-  color: #FFFFFF;
+
+  background-color: #188CE8;
+  color: var(--white);
   
   cursor: pointer;
 }
@@ -564,6 +571,8 @@ body {
 
   border-radius: 4px;
   border: 2px solid #000;
+
+  transition: transform 300ms ;
 }
 
 
@@ -576,6 +585,8 @@ body {
 
   border-color: var(--blue);
   background-color:var(--blue);
+  
+  transform: scale(1.2);
 }
 
 /* MODALKA МОДАЛКА END*/
