--- a/styles/index.css
+++ b/styles/index.css
@@ -54,7 +54,7 @@ body {
   min-height: 80px;
   width: 100%;
 
-  z-index: 100;
+  z-index: 1;
   
   background-color: var(--white);
 }
@@ -307,7 +307,8 @@ body {
 
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-
+  
+  z-index: 2;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -330,8 +331,7 @@ body {
   top: 50%;
   left: 50%;
  
-  padding-top: 40px;
-  padding-bottom: 142px;
+  padding: 40px;
   width: 528px;
   height: 600px;
   
@@ -426,6 +426,14 @@ body {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
 
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+
     resize: none;
     transition: outline-color 300ms;
 }
@@ -465,7 +473,7 @@ body {
 
 .textarea:focus + .form-commentar ,
 .textarea:not(:placeholder-shown) + .form-commentar {
-  transform: translatey(-70px);
+  transform: translate(-24px, -70px);
   transition: color 250ms;
 
   color: var(--blue);
@@ -479,7 +487,7 @@ body {
 
 .form-input:focus + .form-label,
 .form-input:not(:placeholder-shown) + .form-label {
-  transform:translateY(-40px);
+  transform:translate(-30px, -40px);
   transition: transform 300ms, color 250ms;
 
   color: var(--blue);
@@ -490,6 +498,15 @@ body {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+  
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
 }
 
 
@@ -562,7 +579,6 @@ body {
 
 
 .icon-checkbox {
-  
   width: 18px;
   height: 18px;
   margin-right: 7px;
@@ -574,7 +590,7 @@ body {
 }
 
 
-.checkbox:checked ~ .icon-checkbox {
+.checkbox:checked:focus ~ .icon-checkbox {
   background-image: url(../images/icon/svg/jackdaw.svg);
 
   background-size: contain;
@@ -584,7 +600,7 @@ body {
   border-color: var(--blue);
   background-color:var(--blue);
   
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 /* MODALKA МОДАЛКА END*/
@@ -1027,6 +1043,7 @@ body {
   
   width: 358px;
   height: 50px;
+  padding-left: 16px;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
