--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -520,6 +520,7 @@ body {
     
     width: 358px;
     height: 50px;
+    padding-left: 16px;
   
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
