--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,16 +14,18 @@ li{
 
 html {
     box-sizing: border-box;
-  }
-  *,
-  *::before,
-  *::after {
+}
+
+*,
+*::before,
+*::after {
     box-sizing: inherit;
-  }
+}
+
 body {
     padding-top: 80px;
 }
-/* УТИЛИТЫ  */
+/* root  */
 :root {
     --blue:#2196F3;
     --white: #FFF;
@@ -32,8 +34,8 @@ body {
 }
 
 
-/* УТИЛИТЫ  END*/
-.container{
+/* container  END*/
+.container {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -43,7 +45,7 @@ body {
 }
 
 
-/* HEADER-ШАПКА !!! */
+/*HEADER START*/
 .page-header {
     position: fixed;
     top: 0;
@@ -57,32 +59,40 @@ body {
     border-bottom: 1px solid #ECECEC;
     background-color: var(--white);
 }
-
-
-.main-nav {
+/* NAVIGATION */
+.navigation {
     display: flex;
     align-items: center;
 }
 
-
-.name-1 {
+/*NAME START*/
+.navigation__title {
+    font-family: raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    
     padding-top: 24px;
     padding-bottom: 25px;
     margin-right: 94px;
+
+    text-decoration: none;
+    color: var(--blue);
 }
 
+.navigation__studio {
+    color: #000;
+}
+/* NAME END*/
 
 .list {
+    gap: 50px;
     display: flex;
+    list-style: none;
 }
 
-
-.item + .item {
-    margin-left: 50px;
-}
-
-
-.choice {
+.list__link {
     position: relative;
     
     display: block;
@@ -101,13 +111,11 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-
-.item {
+.list__item {
     position: relative;
 }
 
-
-.card::after {
+.list__card::after {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -120,9 +128,14 @@ body {
     border-radius: 2px;
 }
 
+/* CONTACT */
+.contacts {
+    display: flex;
+    margin-left: auto;
+    gap: 50px;
+}
 
-
-.contact {
+.contacts__link {
     display: flex;
     align-items: center;
 
@@ -141,118 +154,34 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.info {
-    display: flex;
-    margin-left: auto;
-}
-
-
-.contact + .contact {
-    margin-left: 50px;
-}
-
-
-.link_mail {
-    width: 16px; 
-    height: 12px;
-
-    margin-right: 10px;
-
-    fill: currentColor;
-}
-
-
-.link_nomer {
-    width: 10px; 
-    height: 16px;
-
-    margin-right: 10px;
-
-    fill: currentColor;
-}
-
-
-.link_mail:hover,
-.link_nomer:hover {
+.contacts__link:hover ,
+.list__link:hover{
+    color: var(--blue);
     fill: var(--blue);
 }
 
-
-.choice:hover ,
-.contact:hover ,
-.choice:focus ,
-.contact:focus {
-    color: var(--blue);
+.contacts__icon {
+    margin-right: 10px;
+    fill: currentColor;
 }
 
-
-.list,
-.list-1 ,
-.list-2 {
-    list-style: none;
-}
-
-
-/* ИМЯ САЙТА  */
-.website_name {
-    font-family: raleway;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    
-    
-    text-decoration: none;
-    color: var(--blue);
-}
-
-
-.studio {
-    color: #000;
-}
-
-
-.studioo {
-    color: var(--white);
-}
-/* ИМЯ САЙТА  END */
-
-
-
-
-/* КНОПКИ */
-
-.button_fon {
+/* MAIN */
+.main__content {
     padding-top: 94px;
     padding-bottom: 94px;
-
 }
-
-
-.but:hover ,
-.but:focus {
-    color: var(--white);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    background-color: var(--blue);
-}
-
-
-.list-1 {
+/* BUTTON MAIN */
+.list-button {
     display: flex;
     text-align: center;
     justify-content: center;
-
     margin-bottom: 50px;
+    gap: 8px;
+
+    list-style: none;
 }
 
-
-.knopki + .knopki {
-    margin-left: 8px;
-}
-
-
-.but {
+.list-button__button {
     padding-top: 6px;
     padding-bottom: 6px;    
     padding-left: 22px;
@@ -271,22 +200,52 @@ body {
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* КНОПКИ END*/
 
+.list-button__button:hover ,
+.list-button__button:focus {
+    color: var(--white);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: var(--blue);
+}
+/* BUTTON MAIN */
 
-/* 9 ФОТО ,НАЗВАНИЕ */
-.relativ_thumb {
+/*SET PHOTO*/
+.list-photo {
+    display: flex;
+    gap: 30px;
+
+    flex-wrap:  wrap;
+    list-style: none;
+}
+.list-photo__item{
+    width:calc((100% - 60px) / 3);
+    
+    background: var(--white);
+    border: 1px solid #EEEEEE; 
+    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-photo__item:hover .overlay {
+    transform: translateY(0);
+}
+
+.list-photo__item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
+
+.list-photo__item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+    0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px 
+    rgba(0, 0, 0, 0.16);
+}
+.list-photo__content {
     position: relative;
     overflow: hidden;
 }
 
 
-.item_photo:hover .overlay {
-    transform: translateY(0);
-}
-
-
-.overlay {
+.list-photo__text {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -306,43 +265,11 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
     
-
-.item_photo:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-}
-
-
-.list-2 {
-    display: flex;
-    gap: 30px;
-
-    flex-wrap:  wrap;
-    list-style: none;
-}
-
-
-.item_photo {
-    width:calc((100% - 60px) / 3);
-    
-    background: var(--white);
-    border: 1px solid #EEEEEE; 
-    
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.item_photo:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-    0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px 
-    rgba(0, 0, 0, 0.16);
-}
-
-
-.h3_p {
+.list-photo__data{
     padding: 20px 24px;
 }
 
-.hthree {
+.list-photo__description {
     font-family: var(--font-roboto);
     font-weight: 700;
     font-size: 18px;
@@ -353,7 +280,7 @@ body {
 }
 
 
-.text {
+.list-photo__name {
     font-family: var(--font-roboto);
     font-style: normal;
     font-weight: 400;
@@ -363,31 +290,44 @@ body {
 
     color: var(--grey); 
 }
+/* MAIN END */
 
 
-.item_photo>a {
-    text-decoration: none;
-}
 
-
-.social_network {
-    display: flex;
-    
-    list-style: none;
-}
-
-
-/* FOOTER- НИЗ */
-.floor {
+/* FOOTER */
+.footer {
     padding-top: 60px;
     padding-bottom: 60px;
 
     background-color: #2F303A;
 }
+.footer__content {
+    display: flex;
+    align-items: baseline;
+}
 
-.streat {
-    margin-bottom: 9px;
+/* CONTACTS FOOTER */
+.contacts-footer {
+    margin-right: 70px;
+}
+.contacts-footer__studio{
+    color: #fff;
+}
+.contacts-footer__title {
+    margin-bottom: 20px;
+    display: block;
 
+    font-family: raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+
+    text-decoration: none;
+    color: var(--blue);
+}
+
+.contacts-footer__streat {
     font-family: var(--font-roboto);
     font-style: normal;
     font-size: 14px;
@@ -398,7 +338,8 @@ body {
 }
 
 
-.contact-1 {
+
+.contacts-footer__contacts{
     display: block;
 
     font-family: var(--font-roboto);
@@ -411,28 +352,23 @@ body {
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-1:hover ,
-.contact-1:focus {
+
+.contacts-footer__streat {
+    margin-bottom: 9px;
+}
+.contacts-footer__streat + .contacts-footer__contacts {
+    margin-bottom: 9px;
+}
+
+
+.contacts-footer__contacts:hover ,
+.contacts-footer__contacts:focus {
     color: var(--blue);
 }
-
-.web {
-    display: block;
-    margin-bottom: 20px;
-}
+/* CONTACTS FOOTER END*/
 
 
-.contact-1 + .contact-1 {
-    margin-top: 9px;
-}
-
-
-.streat_contact-1 {
-    margin-right: 70px;
-}
-
-
-.join {
+.subtitle {
     margin-bottom: 20px;
 
     font-family: var(--font-roboto);
@@ -443,20 +379,13 @@ body {
 
     color: var(--white);
 }
-
-
-.svg_4_4 {
-    fill: var(--white);
-}
-
-
-.footre-container {
+/* social_network START */
+.social_network {
     display: flex;
-    align-items: baseline;
+    list-style: none;
+    gap: 10px;
 }
-
-
-.icons {
+.social_network__link {
     display: flex;
     width: 44px;
     height: 44px;
@@ -469,97 +398,81 @@ body {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.icons:hover ,
-.icons:focus{
+.social_network__link:hover ,
+.social_network__link:focus{
     background-color: var(--blue);
 }
 
-
-.svg_4:hover {
+.social_network__icon {
     fill: var(--white);
 }
-
-
-.iconn:not(:last-child) {
-    margin-right: 10px;
+.social_network__icon:hover {
+    fill: var(--white);
 }
-/* ПІДПИШІТЬСЯ НА РОЗСИЛКУ */
-.butt-type {
-    margin-left: 93px;
-    
-  }
-  
-  
-  .butt-text {
-    display: block;
-    margin-bottom: 20px;
-  
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-  
-    color: #FFFFFF;
-  }
-  
-  
-  .butt-join {
+/* social_network END*/
+
+
+/* JOIN START */
+.footer-button {
+    margin-left: 93px; 
+}
+
+.button-content {
     display: flex;
     gap: 10px;
-  }
+}
   
   
-  .link-input {
+.button-content__input {
     font-family: 'Roboto';
     font-size: 16px;
     line-height: 20px;
     font-size: 16px;
     letter-spacing: 0.03em;
-    
+
     width: 358px;
     height: 50px;
     padding-left: 16px;
-  
+
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
-    
+
     color: rgba(255, 255, 255, 0.6);
     background-color: #2F303A; 
-  
+
     outline: none;
-  }
-  
-  
-  .link-butt {
+}
+
+
+.button-content__butt {
     width: 200px;
     height: 50px;
-  
+
     display: flex;
     justify-content: center;
     align-items: center;
-  
+
     border-radius: 4px;
     background: #2196F3;
     border-color: transparent;
-  
+
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 16px;
     line-height: 1.875;
     letter-spacing: 0.06em;
-  
-    cursor:pointer;
-  
-    color: #FFFFFF;
-  }
-  
-  .icon-icon-send {
-    fill: var(--white);
-  
-    margin-left: 10px;
-  }
 
+    cursor:pointer;
+
+    color: var(--white);
+}
+
+.button-content__icon{
+    margin-left: 10px;
+    
+    fill: var(--white);
+}
+
+/* JOIN START END*/
 
 
